--- a/src/app/signup/signup.page.scss
+++ b/src/app/signup/signup.page.scss
@@ -80,8 +80,8 @@ ion-button {
     margin: 0px auto;
     max-width: 160px;
     width: 100%;
-    height: 45px;
-    font-size: 22px;
+    height: 50px;
+    font-size: 17px;
     text-transform: capitalize;
     border-radius: 4px;
 }
@@ -193,4 +193,8 @@ ion-input {
     cursor: pointer;
     font-size: 22px;
     color: gray;
+}
+
+ion-content {
+    --padding-bottom: calc(90px + env(safe-area-inset-bottom));
 }
