Fixed the design issue

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -19,7 +19,7 @@
       <ion-button *ngIf="introPageType==1" class="login-btn" (click)="gotoNav('login')">Login</ion-button>
 
       <ion-button *ngIf="introPageType==2" class="login-btn" (click)="gotoNav('anonymous')">
-        <div>
+        <div class="btn-class">
           Start Anonymous survey
         </div>
       </ion-button>
