Fixed the mic icon

--- a/src/app/companycode/companycode.page.html
+++ b/src/app/companycode/companycode.page.html
@@ -12,7 +12,7 @@
 
 <ion-content class="ion-padding">
   <ion-card class="white-container">
-    <div class="code ion-margin-vertical">
+    <div class="code ion-margin-vertical btn-class">
       Please enter the unique code provided by your company or other entities
     </div>
     
@@ -29,7 +29,7 @@
     </datalist>
     
     <div class="ion-text-center ion-margin-top">
-      <ion-button 
+      <ion-button class="btn-class"
         style="--background:linear-gradient(180deg, #cd43ec 0%, #b37cf0 100%)" 
         (click)="submitCode(companyCode)"
       >
