--- a/src/app/select-intro/select-intro.page.html
+++ b/src/app/select-intro/select-intro.page.html
@@ -11,7 +11,7 @@
             <ion-button fill="clear" [routerLink]="['/companycode']" class="create-acc-btn type-in">
                 <div>
                     <p class="first_ln">Begin Taking Survey:</p>
-                    <p class="second_ln">Type in Access Code Provided by the Account Holder</p>
+                    <p class="second_ln">Type in Access Code Provided by the Admin Account Holder</p>
                 </div>
             </ion-button>
             <ion-button fill="clear" [routerLink]="['/signup']" class="create-acc-btn type-ins">
