--- a/src/global.scss
+++ b/src/global.scss
@@ -39,10 +39,10 @@
     font-weight: 400;
 }
 
-* {
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 21px;
-}
+// * {
+//     font-family: 'Roboto Condensed', sans-serif;
+//     // font-size: 21px;
+// }
 
 /* Updated for Ionic 8 searchbar */
 ion-searchbar {
