--- a/src/app/select-intro/select-intro.page.scss
+++ b/src/app/select-intro/select-intro.page.scss
@@ -15,6 +15,7 @@ ion-content {
     background-image: url("../../assets/img/bg_top_removed.jpg") !important;
     background-size: 100% 100%;
     --padding-bottom: calc(90px + env(safe-area-inset-bottom));
+    position: relative;
     ion-toolbar {
         --background: translucent;
     }
@@ -89,17 +90,34 @@ ion-content {
             line-height: 26px;
         }
         p {
-            font-size: 21px;
+            font-size: 18px;
             line-height: 1.2;
             color: #fff;
             margin: 0;
             padding: 0;
+            letter-spacing: 0;
+        }
+        p.first_ln{
+            font-size: 19px !important;
+            margin-bottom: 3px;
         }
         a {
             text-decoration: none;
         }
     }
 }
+
+ion-content::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 80px;
+    background: white;
+    z-index: 1;
+    pointer-events: none; 
+  }
 
 .first_ln {
     color: #fff !important;
