--- a/src/app/companycode/companycode.page.scss
+++ b/src/app/companycode/companycode.page.scss
@@ -16,10 +16,25 @@ ion-content {
   --background: transparent;
   background-image: url("../../assets/img/bg_top_removed.jpg") !important;
   background-size: 100% 100%;
+  --padding-bottom: calc(90px + env(safe-area-inset-bottom));
+  position: relative;
 
   ion-toolbar {
     --background: transparent;
   }
+}
+
+/* white bottom area */
+ion-content::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px; /* banner height */
+  background: #ffffff;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .white-container {
