--- a/src/app/select-intro/select-intro.page.scss
+++ b/src/app/select-intro/select-intro.page.scss
@@ -16,6 +16,7 @@ ion-content {
     background-image: url("../../assets/img/bg_top_removed.jpg") !important;
     background-size: 100% 100%;
     --padding-bottom: calc(50px + env(safe-area-inset-bottom));
+    position: relative;
     ion-toolbar {
         --background: translucent;
     }
@@ -116,6 +117,19 @@ ion-content {
             text-decoration: none;
         }
     }
+}
+
+/* white bottom area */
+ion-content::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 70px; /* banner height */
+  background: #ffffff;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .first_ln {
